--- a/index.html
+++ b/index.html
@@ -1,11 +1,85 @@
 <!DOCTYPE html>
 <html lang="tr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Döküman</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="/style/index.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Playfair+Display&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <div>
+        <header class="header-style">
+          <div class="name">Elif Sağlam</div>
+          <div>
+            <nav>
+              <a href="" style="background-color: #344028">Ana Sayfa</a>
+              <a href="">Hakkımda</a>
+              <a href="">İletişim</a>
+              <a href="">Projeler</a>
+            </nav>
+          </div>
+        </header>
+      </div>
+      <div class="adjust">
+        <div>
+          <img src="/images/bosch.png" />
+        </div>
+        <div class="main-par">
+          <h1>ELİF!</h1>
+          <a href="">Projelerim</a>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum
+            deserunt quisquam sapiente vero provident blanditiis nihil veniam
+            odit cum sint iste nemo delectus, quam magnam dolorum atque
+            perferendis nulla quos.
+          </p>
+        </div>
+      </div>
+      <div class="projects">
+        <div>
+          <img src="/images/garden1.png" />
+          <p>Garden</p>
+        </div>
+        <div>
+          <img src="/images/garden2.png" />
+          <p>of</p>
+        </div>
+        <div>
+          <img src="/images/garden 3.png" />
+          <p>Earthly</p>
+        </div>
+        <div>
+          <img src="/images/garden4.png" />
+          <p>Delights</p>
+        </div>
+        <div>
+          <img src="/images/garden5.png" />
+          <p>by</p>
+        </div>
+        <div>
+          <img src="/images/garden6.png" />
+          <p>Hieronymus</p>
+        </div>
+        <div>
+          <img src="/images/garden7.png" />
+          <p>Bosch</p>
+        </div>
+        <div>
+          <img src="/images/garden8.png" />
+          <p>ca. 1500</p>
+        </div>
+      </div>
+      <div>
+        <footer>
+          <p>Gördüklerinden memnun musun?</p>
+          <a href="">Bana Ulaş!</a>
+        </footer>
+      </div>
+    </div>
+  </body>
 </html>
