--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Playfair+Display&display=swap"
       rel="stylesheet"
     />
+    <meta content="width=device-width, initial-scale=1" />
   </head>
   <body>
     <div class="container">
@@ -26,7 +27,7 @@
         </header>
       </div>
       <div class="adjust">
-        <div>
+        <div class="main-img">
           <img src="/images/bosch.png" />
         </div>
         <div class="main-par">
@@ -41,35 +42,35 @@
         </div>
       </div>
       <div class="projects">
-        <div>
+        <div class="project">
           <img src="/images/garden1.png" />
           <p>Garden</p>
         </div>
-        <div>
+        <div class="project">
           <img src="/images/garden2.png" />
           <p>of</p>
         </div>
-        <div>
+        <div class="project">
           <img src="/images/garden 3.png" />
           <p>Earthly</p>
         </div>
-        <div>
+        <div class="project">
           <img src="/images/garden4.png" />
           <p>Delights</p>
         </div>
-        <div>
+        <div class="project">
           <img src="/images/garden5.png" />
           <p>by</p>
         </div>
-        <div>
+        <div class="project">
           <img src="/images/garden6.png" />
           <p>Hieronymus</p>
         </div>
-        <div>
+        <div class="project">
           <img src="/images/garden7.png" />
           <p>Bosch</p>
         </div>
-        <div>
+        <div class="project">
           <img src="/images/garden8.png" />
           <p>ca. 1500</p>
         </div>
